# tmpla

./: .gitignore  LICENSE  README.md  circle.yml  fact.tpl  file  simple.tpl  stack.yaml  test.tpl  tmpla.cabal
app/: Main.hs
samplecode/: arith.tpl  if.tpl  lambda.tpl  let.tpl  nestLambda.tpl  simple.tpl  test.tpl
src/: '  ANormal.hs  Alpha.hs  Asm.hs  Emitter.hs  Expansion.hs  KNormal.hs  PNormal.hs  Parser.hs  RegAlloc.hs  SyntaxSugar.hs  Type.hs  Typeing.hs  Util.hs
src/Asm/: Alloc.hs  Bin.hs  Expand.hs  Label.hs  Type.hs
src/Parser/: Type.hs
