name:                tmpla
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/eliza0x/tmpla#readme
license:             MIT
license-file:        LICENSE
author:              Sohei Yamaga.
maintainer:          me@eliza.link
copyright:           2017 Sohei Yamaga.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Emitter
                     , Parser
                     , Parser.Type
                     , Type
                     , Typeing
                     , SyntaxSugar
                     , Alpha
                     , KNormal
                     , Expansion
                     , Asm
                     , Asm.Type
                     , Asm.Label
                     , Asm.Alloc
                     , Asm.Bin
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , uuid
                     , mtl
                     , containers
                     , extensible-effects
  default-language:    Haskell2010

executable tmpla
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , tmpla
                     , extensible-effects
  default-language:    Haskell2010

test-suite tmpla-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tmpla
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eliza0x/tmpla
